Changed pom, added routing and playground page